--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types"],
     "target": "es5",
+    "types": ["react", "jest"],
     "lib": [
       "dom",
       "dom.iterable",
@@ -24,3 +26,6 @@
     "src"
   ]
 }
+
+
+
